# lox-implementation

./: .gitignore  README.md  book-challenges.md
cpplox/: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  DOC.md  Dockerfile  devel.sh  perf.sh  run_benchmarks.sh  run_tests.sh
cpplox/benchmark/: CMakeLists.txt  benchmark.cpp
cpplox/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
cpplox/cpplox/: CMakeLists.txt  main.cpp
cpplox/include/lox/: chunk.h  common.h  compiler.h  debug.h  memory.h  parser.h  scanner.h  table.h  token.h  value.h  vm.h
cpplox/include/lox/objects/: obj.h  objboundmethod.h  objclass.h  objclosure.h  objfunction.h  objinstance.h  objlist.h  objnative.h  objstring.h  objupvalue.h
cpplox/source/: CMakeLists.txt  chunk.cpp  chunk.h  common.h  compiler.cpp  debug.cpp  main.cpp  memory.cpp  memory.h  object.cpp  object.h  parser.cpp  scanner.cpp  scanner.h  table.cpp  table.h  token.cpp  value.cpp  value.h  vm.cpp  vm.h
cpplox/source/objects/: obj.cpp  objboundmethod.cpp  objclass.cpp  objclosure.cpp  objfunction.cpp  objinstance.cpp  objlist.cpp  objnative.cpp  objstring.cpp  objupvalue.cpp
cpplox/src/: CMakeLists.txt  chunk.cpp  chunk.h  compiler.cpp  compiler.h  debug.cpp  debug.h  main.cpp  memory.cpp  memory.h  obj.cpp  obj.h  objboundmethod.cpp  objboundmethod.h  objclass.cpp  objclass.h  objclosure.cpp  objclosure.h  objfunction.cpp  objfunction.h  objinstance.cpp  objinstance.h  objnative.cpp  objnative.h  objstring.cpp  objstring.h  objupvalue.cpp  objupvalue.h  parser.cpp  parser.h  scanner.cpp  scanner.h  table.cpp  table.h  token.cpp  token.h  value.cpp  value.h  vm.cpp  vm.h
cpplox/tests/: CMakeLists.txt  gen_tests.sh  test-cpplox.cpp  test_scanner.cpp
cpplox/tests/autogen/: test_assignment.cpp  test_block.cpp  test_bool.cpp  test_call.cpp  test_class.cpp  test_closure.cpp  test_comments.cpp  test_constructor.cpp  test_expressions.cpp  test_field.cpp  test_for.cpp  test_function.cpp  test_if.cpp  test_inheritance.cpp  test_limit.cpp  test_logical_operator.cpp  test_method.cpp  test_misc.cpp  test_nil.cpp  test_number.cpp  test_operator.cpp  test_print.cpp  test_regression.cpp  test_return.cpp  test_scanning.cpp  test_string.cpp  test_super.cpp  test_this.cpp  test_variable.cpp  test_while.cpp
cpplox/tests/helpers/: CMakeLists.txt  testhelper.cpp  testhelper.h
cpplox/tests/test/assignment/: associativity.lox  const.lox  global.lox  grouping.lox  infix_operator.lox  local.lox  prefix_operator.lox  syntax.lox  to_this.lox  undefined.lox
cpplox/tests/test/block/: empty.lox  scope.lox
cpplox/tests/test/bool/: equality.lox  not.lox
cpplox/tests/test/break/: break.lox
cpplox/tests/test/call/: object.lox
cpplox/tests/test/class/: empty.lox  inherit_self.lox  inherited_method.lox  local_inherit_other.lox  local_inherit_self.lox  local_reference_self.lox  reference_self.lox
cpplox/tests/test/closure/: assign_to_closure.lox  assign_to_shadowed_later.lox  close_over_function_parameter.lox  close_over_later_variable.lox  close_over_method_parameter.lox  closed_closure_in_function.lox  nested_closure.lox  open_closure_in_function.lox  reference_closure_multiple_times.lox  reuse_closure_slot.lox  shadow_closure_with_local.lox  unused_closure.lox  unused_later_closure.lox
cpplox/tests/test/comments/: line_at_eof.lox  unicode.lox
cpplox/tests/test/constructor/: arguments.lox  call_init_early_return.lox  call_init_explicitly.lox  default.lox  default_arguments.lox  early_return.lox  extra_arguments.lox  init_not_method.lox  missing_arguments.lox  return_in_nested_function.lox  return_value.lox
cpplox/tests/test/continue/: continue_for.lox  continue_outside_loop.lox  continue_while.lox  multiple_continue.lox  nested_loops.lox
cpplox/tests/test/expressions/: evaluate.lox  parse.lox
cpplox/tests/test/field/: call_function_field.lox  call_nonfunction_field.lox  get_and_set_method.lox  get_on_bool.lox  get_on_class.lox  get_on_function.lox  get_on_nil.lox  get_on_num.lox  get_on_string.lox  many.lox  method.lox  method_binds_this.lox  on_instance.lox  set_evaluation_order.lox  set_on_bool.lox  set_on_class.lox  set_on_function.lox  set_on_nil.lox  set_on_num.lox  set_on_string.lox  undefined.lox
cpplox/tests/test/for/: class_in_body.lox  closure_in_body.lox  fun_in_body.lox  return_closure.lox  return_inside.lox  scope.lox  statement_condition.lox  statement_increment.lox  statement_initializer.lox  syntax.lox  var_in_body.lox
cpplox/tests/test/function/: empty_body.lox  extra_arguments.lox  local_mutual_recursion.lox  local_recursion.lox  missing_arguments.lox  mutual_recursion.lox  nested_call_with_arguments.lox  parameters.lox  print.lox  recursion.lox  too_many_arguments.lox  too_many_parameters.lox
cpplox/tests/test/if/: class_in_else.lox  class_in_then.lox  dangling_else.lox  else.lox  fun_in_else.lox  fun_in_then.lox  if.lox  truth.lox  var_in_else.lox  var_in_then.lox
cpplox/tests/test/inheritance/: constructor.lox  inherit_from_function.lox  inherit_from_nil.lox  inherit_from_number.lox  inherit_methods.lox  parenthesized_superclass.lox  set_fields_from_base_class.lox
cpplox/tests/test/limit/: loop_too_large.lox  no_reuse_constants.lox  stack_overflow.lox  too_many_constants.lox  too_many_locals.lox  too_many_upvalues.lox
cpplox/tests/test/logical_operator/: and.lox  and_truth.lox  or.lox  or_truth.lox
cpplox/tests/test/method/: arity.lox  empty_block.lox  extra_arguments.lox  missing_arguments.lox  not_found.lox  print_bound_method.lox  refer_to_name.lox  too_many_arguments.lox  too_many_parameters.lox
cpplox/tests/test/misc/: precedence.lox
cpplox/tests/test/nil/: literal.lox
cpplox/tests/test/number/: literals.lox  nan_equality.lox
cpplox/tests/test/operator/: add.lox  add_bool_nil.lox  add_bool_num.lox  add_bool_string.lox  add_nil_nil.lox  add_num_nil.lox  add_string_nil.lox  comparison.lox  divide.lox  divide_nonnum_num.lox  divide_num_nonnum.lox  equals.lox  equals_class.lox  equals_method.lox  greater_nonnum_num.lox  greater_num_nonnum.lox  less_nonnum_num.lox  (+16 more)
(+99 files in other folders)
