cmake_minimum_required(VERSION 3.14)

project(lox-language)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(BUILD_SHARED_LIBS true)
set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)

set(SANITIZER "" CACHE STRING "Sanitizer to use. Valid values are 'address', 'undefined' or ''.")
option(BUILD_LOX_TESTS "Build lox tests." ON)

if("${SANITIZER}" STREQUAL "undefined")
    message(STATUS "Using undefined behaviour sanitizer!")
    set(SANITIZER_LINK_FLAGS -fsanitize=undefined)
    set(SANITIZER_COMPILE_FLAGS -fsanitize=undefined -fno-omit-frame-pointer)
elseif("${SANITIZER}" STREQUAL "address")
    message(STATUS "Using address sanitizer!")
    set(SANITIZER_LINK_FLAGS -fsanitize=address)
    set(SANITIZER_COMPILE_FLAGS -fsanitize=address -fno-omit-frame-pointer)
elseif("${SANITIZER}" STREQUAL "")
    message(STATUS "Not using sanitizers!")
    set(SANITIZER_LINK_FLAGS "")
    set(SANITIZER_COMPILE_FLAGS "")
else()
    message(SEND_ERROR "Unrecognised sanitizer: ${SANITIZER}")
endif()

add_subdirectory(src)

# add_subdirectory(benchmark)
if(BUILD_LOX_TESTS)
    message(STATUS "Lox tests enabled.")
    enable_testing()
    add_subdirectory(tests)
else()
    message(STATUS "Lox tests disabled.")
endif()